--- a/KrungRomeHomemade/Properties/Resources.resx
+++ b/KrungRomeHomemade/Properties/Resources.resx
@@ -142,6 +142,9 @@
   <data name="user" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\user.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Krung Rome Homemade2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Krung Rome Homemade1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Krung Rome Homemade" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Krung Rome Homemade.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -187,11 +190,20 @@
   <data name="LOGO Krung Rome Homemade2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\LOGO Krung Rome Homemade2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="QR" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\QR.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Sandwich &amp; Savory" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Sandwich &amp; Savory.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ตะกร้า" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ตะกร้า.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Krung Rome Homemade1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Krung Rome Homemade.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="QR1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\QR1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="LOGO Krung Rome Homemade" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\LOGO Krung Rome Homemade.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -199,7 +211,7 @@
   <data name="LOGO Krung Rome Homemade21" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\LOGO Krung Rome Homemade21.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Krung Rome Homemade1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Krung Rome Homemade.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Krung Rome Homemade (1)1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Krung Rome Homemade (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
